First stab at the OrcidIntegrationController (broken)

--- a/productMods/WEB-INF/web.xml
+++ b/productMods/WEB-INF/web.xml
@@ -1399,6 +1399,15 @@
     <url-pattern>/smoketest</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>OrcidIntegrationController</servlet-name>
+    <servlet-class>edu.cornell.mannlib.vivo.orcidinterface.OrcidIntegrationController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>OrcidIntegrationController</servlet-name>
+    <url-pattern>/orcid/*</url-pattern>
+  </servlet-mapping>
+  
  
   <!-- ==================== tag libraries ============================== -->
   <jsp-config>
