--- a/productMods/WEB-INF/web.xml
+++ b/productMods/WEB-INF/web.xml
@@ -1401,7 +1401,7 @@
   
   <servlet>
     <servlet-name>OrcidIntegrationController</servlet-name>
-    <servlet-class>edu.cornell.mannlib.vivo.orcidinterface.OrcidIntegrationController</servlet-class>
+    <servlet-class>edu.cornell.mannlib.vivo.orcid.controller.OrcidIntegrationController</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>OrcidIntegrationController</servlet-name>
